syntax = "proto3";

package proto;

option go_package = "www.velocidex.com/golang/velociraptor/api/proto";

message SecretDefinition {
    string type_name = 1;
    string verifier = 2;

    repeated string secret_names = 3;
}

message SecretDefinitionList {
    repeated SecretDefinition items = 1;
}

message Secret {
    string name = 1;
    string type_name = 2;
    map<string, string> secret = 3;

    repeated string users = 4;
}

message ModifySecretRequest {
    string type_name = 1;
    string name = 2;

    // If set the secret will be deleted.
    bool delete = 3;
    repeated string add_users = 4;
    repeated string remove_users = 5;
}
